# dagster-coalesce-component

./: .gitignore  README.md  pyproject.toml
src/dagster_coalesce_component/: utils.py
src/dagster_coalesce_component/components/: coalesce_environment.py  coalesce_project_component.py  coalesce_start_a_run.py
src/dagster_coalesce_component/defs/coalesce_assets/: defs.yaml
src/dagster_coalesce_component/defs/my_coalesce_assets/: defs.yaml
src/dagster_coalesce_component/defs/sample_coalesce_env/: defs.yaml
